--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^16.3.1",
+    "@react-native-firebase/remote-config": "^16.3.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "add": "^2.0.6",
     "react": "18.1.0",
     "react-native": "0.70.2",
+    "react-native-device-info": "^10.3.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.4.0"
+    "react-native-svg": "^13.4.0",
+    "react-native-toast-notifications": "^3.3.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
